manifests/kanboard/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
        - name: backend
          image: docker.io/kanboard/kanboard
          ports:
            - name: http
              containerPort: 80
