manifests/kanboard/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: kanboard
